# alphatims

./: .bumpversion.toml  MANIFEST.in  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: create_release.yml  pip_installation.yml  publish_and_release.yml  publish_on_pypi.yml
alphatims/: __init__.py  bruker.py  gui.py
misc/: bumpversion.cfg
misc/one_click_linux/: control  create_installer_linux.sh
misc/one_click_macos/: create_installer_macos.sh
misc/one_click_windows/: alphatims_innoinstaller.iss  create_installer_windows.bat  create_installer_windows.sh
misc/pyinstaller/: alphatims.spec
release/linux/: build_installer_linux.sh  build_package_linux.sh  control
release/macos/: Info.plist  build_installer_macos.sh  build_package_macos.sh  distribution.xml
release/pyinstaller/: alphatims.spec
release/windows/: alphatims_innoinstaller.iss  build_installer_windows.ps1  build_package_windows.ps1
requirements/: requirements_plotting.txt
